--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "nodemon src/index.ts",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p ."
+    "build": "tsc",
+    "start:prod": "npm run build && node dist/index.js",
+    "restart": "pkill -f node && npm run build && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,11 +26,15 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.7"
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2"
   }
 }
